Fixed view window of text being off-screen for smaller screens

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,13 +19,13 @@
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    margin-left: 20px;
+    margin-left: 2vw;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
     display: flex;
     align-items: center;
-    margin-right: 900px;
+    margin-right: 50vw;
   }
   
   .fa-typo3 {
